# live-radio-karaoke-android

./: .gitignore  README.md  build.gradle.kts  index.html  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/k2fsa/sherpa/onnx/: SherpaOnnx.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/: KaraokeApp.kt  MainActivity.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/asr/: AsrEngine.kt  OpenCcConverter.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/audio/: PcmTapAudioProcessor.kt  RadioStreamController.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/data/: Config.kt  DeviceTier.kt  ModelRepository.kt  Models.kt  RadioBrowserApi.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/export/: TranscriptExporter.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/llm/: GemmaPrompt.kt  LlamaBridge.kt  LlmEngine.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/service/: KaraokeService.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/ui/: Dialogs.kt  MainScreen.kt  PlayerBar.kt  StationPicker.kt  SummaryPanel.kt  Transcript.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/ui/theme/: Theme.kt
app/src/main/java/io/github/vieenrose/liveradiokaraoke/vm/: KaraokeViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt
fdroid/: metadata-template.yml  ortdeps-manifest.txt
fdroid/fdroiddata-mr/: README.md
fdroid/fdroiddata-mr/metadata/: io.github.vieenrose.liveradiokaraoke.yml
fdroid/fdroiddata-mr/srclibs/: LiveRadioKaraokeOrtDeps.yml  llama.cpp.yml  onnxruntime.yml  sherpa-onnx.yml
gradle/: libs.versions.toml
repo/: entry.json  index-v1.json  index-v2.json  index.html  index.xml
repo/diff/: 1782202060000.json  1782202111000.json  1782212404000.json  1782275709000.json  1782278579000.json  1782279983000.json  1782280603000.json  1782281473000.json
repo/status/: running.json  update.json
scripts/: build-host-protoc.sh  build-onnxruntime-android.sh  build-sherpa-android.sh  fetch-native-libs.sh
